Fixed TopBar/MainGallery clipping issue on smaller screens

--- a/frontend/src/app/page.module.css
+++ b/frontend/src/app/page.module.css
@@ -81,18 +81,23 @@
     position: relative;
     width: 100%;
     height: 100%;
+    display: flex;
+    flex-direction: column;
+    min-height: 0;
 }
 
 .main {
-    padding: 24px 28px;
+    padding: 24px 24px;
+    display: flex;
+    flex-direction: column;
+    flex: 1 1 auto;
+    min-height: 0;
     overflow-y: auto;
     max-height: 100%;
-    padding-top: 100px;
 }
 
 @media (max-width: 768px) {
     .main {
-        padding-top: 96px;
         padding-left: 16px;
         padding-right: 16px;
     }
@@ -131,10 +136,12 @@
 }
 
 .page {
+    flex: 1 1 auto;
     max-height: 100%;
     height: 100%;
     display: flex;
     flex-direction: column;
+    min-height: 0;
 }
 
 .gallery_tags_container {
@@ -152,6 +159,11 @@
     max-height: 100%;
     height: 100%;
     overflow: hidden;
+}
+
+.main_parent {
+    flex: 1 1 auto;
+    min-height: 0;
 }
 
 .gallery {
