--- a/frontend/src/components/Gallery/MainGallery/MainGallery.module.css
+++ b/frontend/src/components/Gallery/MainGallery/MainGallery.module.css
@@ -13,8 +13,7 @@
     align-content: flex-start;
     width: 100%;
     box-sizing: border-box;
-    overflow-y: scroll;
-    max-height: 10%;
+    overflow: visible;
 }
 
 .grid::after {
